--- a/public/tracking.html
+++ b/public/tracking.html
@@ -15,12 +15,12 @@
 
     .seccion {
       display: flex;
-      margin:10px 20px;
+      margin: 10px 20px;
 
     }
 
     .line-container {
-      margin-top: 30vh;
+      margin-top: 5vh;
       display: flex;
       width: 100%;
     }
@@ -47,7 +47,7 @@
 
     .line-container .status {
       position: relative;
-      top: -9.5px;
+      top: -5.5px;
     }
 
     .line-container .status .dot {
@@ -83,6 +83,29 @@
       transform: rotate(-45deg);
       z-index: 2;
     }
+
+    #chat_body {
+      overflow-y: scroll;
+      min-height: 250px;
+      max-height: 250px;
+    }
+
+    .chat_header{
+      color:#007bff;
+    }
+
+    #chat{
+      max-width: 360px;
+      margin-top: 25px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .chat_header{
+      border-bottom: 1px solid #fd7e14;
+    }
+    #chat_body{
+      border: 1px solid #fd7e14;
+    }
   </style>
 </head>
 
@@ -109,49 +132,72 @@
   </nav>
 
   <div class="container"></div>
-    <div>
-      <div class="title">
-        <h3>Ingrese el numero de pedido</h3>
-      </div>
-      <div class="seccion">
-        <input style="flex-grow: 2" name="order" type="number" id="orderInput">
-        <button style="flex-grow: 1;    margin-left: 15px;" type="submit" class="btn btn-primary"
-          onclick="tracking()">Buscar Pedido</button>
-
-      </div>
+  <div>
+    <div class="title">
+      <h3>Ingrese el numero de pedido</h3>
+    </div>
+    <div class="seccion">
+      <input style="flex-grow: 2" name="order" type="number" id="orderInput">
+      <button style="flex-grow: 1;    margin-left: 15px;" type="submit" class="btn btn-primary"
+        onclick="tracking()">Buscar Pedido</button>
 
     </div>
+
+  </div>
   </div>
   <div id="tracking-list">
 
-      <div class='line-container'>
-        <div class='progress-line'>
-          <div class='progress' style="width: 50%;">
-          </div>
-          <div class='status'>
-            <div class='dot completed'>
+    <div class='line-container'>
+      <div class='progress-line'>
+        <div class='progress' style="width: 50%;">
+        </div>
+        <div class='status'>
+          <div class='dot completed'>
 
-            </div>
           </div>
-          <div class='status'>
-            <div class='dot current'>
+        </div>
+        <div class='status'>
+          <div class='dot current'>
 
-            </div>
           </div>
-          <div class='status'>
-            <div class='dot'>
+        </div>
+        <div class='status'>
+          <div class='dot'>
 
-            </div>
           </div>
-
         </div>
 
       </div>
 
+    </div>
+
+    <div class="container viewTracking">
+      <div id="detailPedido">
+
+      </div>
+      <div class="d-flex justify-content-center mt-5">
+        <div class="spinner-border" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div id="chat">
+    <div class="chat_header">
+      CHAT ONLINE
+    </div>
+    <div id="chat_body"></div>
+
+    <form action="javascript:void(0);">
+      <input type="text" name="message" id="message">
+      <button id="buttonChat">Enviar</button>
+    </form>
   </div>
   <script src="libs/jquery.min.js"></script>
 
   <script>
+
     function tracking() {
       if (!$('#orderInput').val()) {
         alert("ingrese un valor valido");
@@ -161,9 +207,14 @@
       }
     }
 
-    function getValue(value) {
+
+  </script>
         
-    }
+  <script>
+      
+      $('#buttonChat').click((data)=>{
+        console.log("send Chat");
+      })
   </script>
 </body>
 
