--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="mx-auto mb-2">
-        <button onclick="registerOrder()" type="submit" class="btn btn-primary">Agregar Pedido</button>
+        <button  type="submit" class="btn btn-primary">Agregar Pedido</button>
       </div>
     </form>
 
@@ -115,10 +115,10 @@
     crossorigin="anonymous"></script>
 
   <script>
-    let url = window.location.host;
+   /*  let url = window.location.host;
     const urlPost = 'http://' + url.toString() + '/order/post/demo';
     const urlGet = 'http://' + url.toString() + '/order/get/demo';
-
+ */
 /*     $('.bottonmessage').hover(() => {
       const name = $('#inputName').val();
       const lastName = $('#inputLastName').val();
@@ -144,7 +144,7 @@
 
     */
 
-    function registerOrder() {
+  /*   function registerOrder() {
 
       const name = $('#inputName').val();
       const lastName = $('#inputLastName').val();
@@ -177,11 +177,7 @@
           console.log(data);
         })
     }
-    
-    function registerOrder2() {
-            console.log("send2");
-    }
-
+     */
   </script>
 </body>
 
