--- a/public/courier.html
+++ b/public/courier.html
@@ -161,7 +161,7 @@
       bodyData.zip = values[7].value;
 
       let url = window.location.host;
-      const urlPost = 'http://' + url.toString() + '/order/post/demo';
+      const urlPost = 'https://' + url.toString() + '/order/post/demo';
 
       fetch(urlPost, {
         headers: {
